--- a/default.css
+++ b/default.css
@@ -308,3 +308,9 @@ h6 {font-size: 16px;}
         justify-content: center;
     }
 }
+
+@media screen and (max-width: 800px){
+    .greeting-wrapper{
+        width: 95%;
+    }
+}
