--- a/default.css
+++ b/default.css
@@ -309,4 +309,8 @@ h6 {font-size: 16px;}
     }
 }
 
-
+@media screen and (max-width: 800px){
+    .greeting-wrapper{
+        justify-content:center;
+    }
+}
