--- a/default.css
+++ b/default.css
@@ -310,7 +310,5 @@ h6 {font-size: 16px;}
 }
 
 @media screen and (max-width: 600px){
-    .greeting-wrapper{
-        display:block;
-    }
+    h2 {font-size: 24px;}
 }
