--- a/default.css
+++ b/default.css
@@ -305,3 +305,7 @@ h6 {font-size: 16px;}
         justify-content: center;
     }
 }
+
+@media only screen and (min-width: 480px) and (max-width: 767px){
+    h1 {font-size:48px;}
+}
